# shaitan

./: .gitmodules  Cargo.toml  README.md
src/discover/: Cargo.toml  build.rs
src/discover/src/: main.rs
src/plugins/rust/doc/: Cargo.toml
src/scheduler/: Cargo.toml  build.rs
src/scheduler/proto/: helloworld.proto
src/server/: Cargo.toml  build.rs
src/server/proto/: queue.proto
src/server/src/: engine.rs  main.rs  pipelines.rs
src/services/python/exe/: exe_pb2.py  exe_pb2_grpc.py  main.py
src/services/python/math/: main.py  math.proto  math_pb2.py  math_pb2_grpc.py
src/services/rust/txt/: Cargo.toml
src/shaitan/: Cargo.toml
src/shaitan-sdk/: Cargo.toml
src/shaitan-sdk/src/: lib.rs
src/shaitan-worker/: Cargo.toml
src/shaitan-worker/src/: main.rs
src/shaitan/src/: main.rs
src/worker/: Cargo.toml  build.rs
src/worker/src/: main.rs
