[package]
name = "discover"
version = "0.1.0"
authors = ["perfilev <perfilev@perfilev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = "*"
base64 = "*"
prost-types = "0.7.0"
protobuf = { path = "../../../rust-protobuf/protobuf" }
serde-protobuf = "*"
futures-util = "*"

[build-dependencies]
tonic-build = "0.4"