[package]
name = "shaitan-sdk"
version = "0.1.0"
authors = ["perfilev <perfilev@perfilev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"