[package]
name = "shaitan-worker"
version = "0.1.0"
authors = ["perfilev <perfilev@perfilev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaitan-sdk = { path = "../shaitan-sdk" }
dyn-clone = "1.0.4"
threadpool = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "*"
zeromq = { version = "0.2.0", default-features = false, features = ["async-std-runtime"] }
async-std = "*"