[package]
name = "worker"
version = "0.1.0"
authors = ["perfilev <perfilev@perfilev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = "*"
base64 = "*"
prost-types = "0.7.0"
protobuf = { git = "https://github.com/Dixeran/rust-protobuf.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-protobuf = "*"
futures-util = "0.3.15"
multiqueue = "*"
futures = "0.3.15"
regex = "1.5"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.4"